@@ -23,7 +23,7 @@ public class Activator implements BundleActivator {
     final Hashtable<String, Object> props = new Hashtable<String, Object>();
     props.put("name", "cssembed");
     props.put("version", "0.4.5");
-    props.put("service.ranking", new Integer(10));
+    props.put("service.ranking", Integer.valueOf(10));
     this.registration = context.registerService(Processor.class,
         new CssembedProcessor(), props);
   }
