@@ -23,7 +23,7 @@ public class Activator implements BundleActivator {
     final Hashtable<String, Object> props = new Hashtable<String, Object>();
     props.put("name", "typescript");
     props.put("version", "0.0.1");
-    props.put("service.ranking", new Integer(10));
+    props.put("service.ranking", Integer.valueOf(10));
     this.registration = context.registerService(Processor.class,
         new TypescriptProcessor(), props);
   }
